<package>

  <name>open_street_map</name>
  <version>0.3.0</version>
  <description>
    ROS packages for working with Open Street Map geographic
    information.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/open_street_map</url>
  <url type="repository">https://github.com/ros-geographic-info/open_street_map</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/open_street_map/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>osm_cartography</run_depend>
  <run_depend>route_network</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
