<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osm_cartography</name>
  <version>0.2.5</version>
  <description>
     Geographic mapping using Open Street Map data.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/osm_cartography</url>
  <url type="repository">https://github.com/ros-geographic-info/open_street_map.git</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/open_street_map/issues</url>

  <depend>geodesy</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <exec_depend>route_network</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>
